; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_set_full_iv.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_aes_ctr.c_av_aes_ctr_set_full_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AVAESCTR = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @av_aes_ctr_set_full_iv(%struct.AVAESCTR* %0, i32* %1) #0 {
  %3 = alloca %struct.AVAESCTR*, align 8
  %4 = alloca i32*, align 8
  store %struct.AVAESCTR* %0, %struct.AVAESCTR** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.AVAESCTR*, %struct.AVAESCTR** %3, align 8
  %6 = getelementptr inbounds %struct.AVAESCTR, %struct.AVAESCTR* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @memcpy(i32 %7, i32* %8, i32 4)
  %10 = load %struct.AVAESCTR*, %struct.AVAESCTR** %3, align 8
  %11 = getelementptr inbounds %struct.AVAESCTR, %struct.AVAESCTR* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
